--- a/project-juice-2.0/src/components/Carousel/Carousel.css
+++ b/project-juice-2.0/src/components/Carousel/Carousel.css
@@ -25,8 +25,8 @@
   width: 50px;
   height: 50px;
   padding: 0;
-  font-size: 24px;
-  font-family: "Press Start 2P";
+  font-size: 30px;
+  font-family: "Unbounded";
   color: rgba(255, 255, 255, 0.87);
   cursor: pointer;
   transition: border-color 0.25s;
@@ -37,6 +37,8 @@
 }
 
 .carousel-btn.desktop {
+  padding: 0px;
+  margin: 0px;
   display: none;
   position: absolute;
   top: 50%;
@@ -47,8 +49,8 @@
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  font-size: 24px;
-  font-family: "Press Start 2P";
+  font-size: 30px;
+  font-family: "Unbounded";
   color: rgba(255, 255, 255, 0.87);
   cursor: pointer;
   transition: border-color 0.25s;
