--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -87,7 +87,7 @@ body {
 }
 
 .pnf-h1 {
-  margin: 10px 0px 0px 0px;
+  margin: 0px;
 }
 
 .pnf-button {
@@ -434,6 +434,7 @@ button {
   border: 2px solid #1a1a1a;
   padding-top: 10px;
   padding-bottom: 10px;
+  margin: 0px;
 }
 
 button,
