--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
+
+@import "tailwindcss";
 /* ------------------------------------------------ */
 /* --- ROOT // BODY --- */
 /* ------------------------------------------------ */
