--- a/project-juice-2.0/src/components/BasicTile/BasicTile.css
+++ b/project-juice-2.0/src/components/BasicTile/BasicTile.css
@@ -20,11 +20,12 @@
   width: 350px;
   padding: 1rem;
   border-radius: 8px;
-  box-shadow: 4px 4px #171717;
-  border: 3px solid #111111;
+  box-shadow: 8px 8px #161616;
+  border: 2px solid #000000;
 }
 
 .card:hover {
-  box-shadow: 8px 8px #161616;
+  box-shadow: 12px 12px #161616;
+  border: 2px solid white;
 }
 
