--- a/project-juice-2.0/src/components/Carousel/Carousel.css
+++ b/project-juice-2.0/src/components/Carousel/Carousel.css
@@ -45,7 +45,7 @@
   transform: translateY(-50%);
   z-index: 2;
   background-color: #111010;
-  border: 2px solid #111010;
+  border: 2px solid #000000;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -91,11 +91,11 @@
 }
 
 .carousel-card {
-  background-color: #1a1a1a;
+  background-color: #111010;
   height: 400px;
   border-radius: 8px;
   cursor: pointer;
-  border: 2px solid #1a1a1a;
+  border: 2px solid #000000;
   flex-shrink: 0;
   scroll-snap-align: start;
   width: 350px;
