--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -47,10 +47,10 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   font-weight: 900;
-  background-color: #1a1a1a;
+  background-color: #111010;
   cursor: pointer;
   transition: border-color 0.25s;
-  border: 2px solid #1a1a1a;
+  border: 2px solid #000000;
   padding-top: 10px;
   padding-bottom: 10px;
   margin: 0px;
