--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -2,7 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
 
-
 @import "tailwindcss";
 
 :root {
@@ -15,16 +14,18 @@
 
 body {
   color: rgba(255, 255, 255, 0.87);
-  /* Zastąp #242424, 0.7 przez żądany kolor i krycie */
-  background-image: linear-gradient(rgba(26, 25, 25, 0.925), rgba(36, 36, 36, 0.7)), 
-                    url('./assets/background.png');
-  /* Wartość 36, 36, 36 to RGB dla #242424. 0.7 to krycie. */
-
+  background-image: radial-gradient(
+      circle,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(44, 44, 44, 0.527) 20%,
+      rgba(12, 12, 12, 0.699) 100%
+    ),
+    url("./assets/background.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
-  min-height: 100vh; 
+  min-height: 100vh;
 }
 
 h1 {
@@ -53,7 +54,7 @@ button {
   padding-top: 10px;
   padding-bottom: 10px;
   margin: 0px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
   font-size: 20px;
 }
 
@@ -65,7 +66,3 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
-
-
-
